// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders learn react link 1`] = `
<h3
  class="heading-task"
>
  Задачи в процессе выполнения
</h3>
`;

exports[`renders learn react link 2`] = `
<h3
  class="heading-task"
>
  Выполненные задачи
</h3>
`;
